Finish the authentication & authorisation feature

--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "homepage": "https://github.com/Medo-ID/Ecommerce_REST_API#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.0"
   },
   "devDependencies": {
